--- a/render.yaml
+++ b/render.yaml
@@ -9,8 +9,8 @@ services:
     plan: free
     name: mysite
     runtime: python
-    buildCommand: "./build.sh"
-    startCommand: "python -m gunicorn kft_backend.asgi:application -k uvicorn.workers.UvicornWorker"
+    buildCommand: 'cd kft_backend && ./build.sh'
+    startCommand: 'cd kft_backend && python -m gunicorn mysite.asgi:application -k uvicorn.workers.UvicornWorker'
     envVars:
       - key: DATABASE_URL
         fromDatabase:
